# LLM-Generate

./: .gitignore  app.py  pyproject.toml  requirements.txt
src/: config.py
src/core/: tokens.py
src/decorators/: token_usage.py  usage.py
src/formatter/: base.py  factory.py  gemini.py
src/llm/: __init__.py  settings.py
src/llm/core/: tokens.py
src/llm/extractors/: base.py  factory.py  fallback.py  gemini.py
src/llm/services/: base.py  gemini.py
src/llm_sdk/: __init__.py  async_retries.py  async_sdk.py  context.py  exceptions.py  lifecycle.py  plugin_loader.py  registry.py  sdk.py  settings.py  timeouts.py  typing.py
src/llm_sdk/_async/: async_retries.py  async_sdk.py  lifecycle.py  plugin_loader.py
src/llm_sdk/_async/providers/: __main__.py  async_base.py  async_noop_client.py  async_registry.py
src/llm_sdk/_async/providers/gemini/: async_client.py  plugin.py
src/llm_sdk/domain/: chat.py  embeddings.py  models.py
src/llm_sdk/providers/: __main__.py  async_gemini_client.py  async_noop_client.py  async_registry.py  gemini_client.py  noop_client.py
src/llm_sdk/providers/gemini/: plugin.py
src/llm_sdk/sync/: retries.py  sdk.py
src/llm_sdk/sync/providers/: base.py  noop_client.py  registry.py
src/llm_sdk/sync/providers/gemini/: client.py  settings.py
src/mocks/: template_prompt.yaml
src/schemas/: token_schema.py
src/services/: gemini.py
src/storage/: gcs.py
